<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AsyncTask Explore</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="download_btn">Download</string>
    <string name="progress">downloading 0%</string>
    <string name="async_callbacks">call backs</string>
    <string name="clear_btn">Clear Display</string>

</resources>
